crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.Pinhole.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "image_from_camera",
        [
            "[100.0, 0.0, 0.0, 0.0, 100.0, 0.0, 100.0, 100.0, 1.0]",
        ],
    ),
    (
        "resolution",
        [
            "[0.0, 0.0]",
        ],
    ),
    (
        "camera_xyz",
        [
            "[3, 2, 5]",
        ],
    ),
    (
        "image_plane_distance",
        [
            "1.0",
        ],
    ),
    (
        "color",
        [
            "2428259839",
        ],
    ),
    (
        "line_width",
        [
            "0.5",
        ],
    ),
]
