crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.RecordingInfo.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "start_time",
        [
            "0",
        ],
    ),
    (
        "name",
        [
            "<name>",
        ],
    ),
]
