crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.SeriesLines.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "colors",
        [
            "2428259839",
        ],
    ),
    (
        "widths",
        [
            "0.75",
        ],
    ),
    (
        "names",
        [
            "<name>",
        ],
    ),
    (
        "visible_series",
        [
            "true",
        ],
    ),
    (
        "aggregation_policy",
        [
            "5",
        ],
    ),
]
