crates/viewer/re_component_fallbacks/tests/snapshots/all_component_fallbacks__arch_fallback_rerun.archetypes.SeriesPoints.snap
---
source: crates/viewer/re_component_fallbacks/tests/all_component_fallbacks.rs
expression: arch_display
---
[
    (
        "colors",
        [
            "2428259839",
        ],
    ),
    (
        "markers",
        [
            "1",
        ],
    ),
    (
        "names",
        [
            "<name>",
        ],
    ),
    (
        "visible_series",
        [
            "true",
        ],
    ),
    (
        "marker_sizes",
        [
            "3.0",
        ],
    ),
]
